Fixed codesmell on collection-creation by stream